--- a/package.json
+++ b/package.json
@@ -1,23 +1,47 @@
 {
-  "name": "mqtt-influxdb",
-  "version": "0.0.1",
-  "description": "Send mqtt messages to influxdb",
-  "main": "mqtt2influxdb.js",
+  "name": "mqtt2influxdb",
+  "version": "0.0.0-development",
+  "description": "mqtt to influxdb bridge for mqtt-smarthome",
+  "main": "buderus2mqtt.js",
+  "preferGlobal": true,
+  "bin": "./mqtt2influxdb.js",
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "engineStrict": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "semistandard && exit 0",
+    "start": "node ./buderus2mqtt.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/krambox/mqtt-influxdb.git"
+    "url": "https://github.com/krambox/mqtt2influxdb"
   },
-  "author": "",
-  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/krambox/mqtt-influxdb/issues"
+    "url": "https://github.com/krambox/mqtt2influxdb/issues"
   },
-  "homepage": "https://github.com/krambox/mqtt-influxdb",
+  "homepage": "https://github.com/krambox/mqtt2influxdb#readme",
+  "keywords": [
+    "mqtt",
+    "smarthome",
+    "influxdb"
+  ],
+  "author": "Kai Kramer",
+  "license": "MIT",
   "dependencies": {
-    "influx": "^4.0.0",
-    "mqtt": "^1.3.4"
-  }
+    "influx": "^5.0.7",
+    "mqtt": "^2.14.0",
+    "request": "^2.83.0",
+    "yalm": "^4.1.0",
+    "yargs": "^10.0.3"
+  },
+  "devDependencies": {
+    "pre-commit": "^1.2.2",
+    "semantic-release": "^9.1.1",
+    "semistandard": "^11.0.0"
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
